--- a/config.yaml
+++ b/config.yaml
@@ -12,7 +12,7 @@ copyright: '' # Footer text, e.g. '© {year} Me'
 ## LANGUAGE
 ############################
 
-defaultContentLanguage: cz
+defaultContentLanguage: cs
 hasCJKLanguage: false
 defaultContentLanguageInSubdir: false
 removePathAccents: true
